# card-core-V2

./: AGENTS.md  Cargo.toml  Effect.md  GamePlan.md  Readme.md  config.toml
desks/: another_deck.txt  example_deck.txt  final_deck.txt
logs/: crates-docs.log.2026-03-03  crates-docs.log.2026-03-05
lua/: S000-C-001.lua  S000-C-002.lua  S000-C-004.lua  S000-C-008.lua  S000-C-010.lua  S000-C-018.lua  S000-C-020.lua  S000-C-022.lua  S000-C-023.lua  S000-C-025.lua  S000-C-026.lua  S000-C-027.lua  S000-C-029.lua  S000-C-036.lua  S000-C-041.lua  S000-C-044.lua  S000-C-045.lua  S000-C-046.lua  S000-C-049.lua  S000-C-054.lua  S000-C-055.lua  S000-C-059.lua  S000-C-060.lua  S000-C-063.lua  S000-C-065.lua  S000-C-066.lua  S000-C-069.lua  S000-C-073.lua  S000-C-074.lua  S000-C-077.lua  S000-C-078.lua  S000-C-080.lua  S000-C-081.lua  S000-C-085.lua  S000-C-087.lua  S000-C-089.lua  S000-C-090.lua  S000-C-092.lua  S000-C-095.lua  S000-C-097.lua  (+3 more)
lua/test-001/: S000-C-003.lua  S000-C-005.lua  S000-C-006.lua  S000-C-007.lua  S000-C-009.lua  S000-C-011.lua  S000-C-012.lua  S000-C-013.lua  S000-C-014.lua  S000-C-015.lua  S000-C-016.lua  S000-C-017.lua  S000-C-019.lua  S000-C-021.lua  S000-C-024.lua  S000-C-028.lua  S000-C-030.lua  S000-C-031.lua  S000-C-032.lua  S000-C-033.lua  S000-C-034.lua  S000-C-035.lua  S000-C-037.lua  S000-C-038.lua  S000-C-039.lua  S000-C-040.lua  S000-C-042.lua  S000-C-043.lua  S000-C-047.lua  S000-C-048.lua  S000-C-050.lua  S000-C-051.lua  S000-C-052.lua  S000-C-053.lua  S000-C-056.lua  (+23 more)
src/: config.rs  lib.rs  main.rs
tests/: card_effects_test.rs
(+28 files in other folders)
